objects/AreaCountry__c.object
<CustomObject>
    <description>Countries in areas defined by country.</description>
    <fields>
        <fullName>AreaCountryEID__c</fullName>
        <description>The Enterprise ID for this Area Country.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Area Country.</inlineHelpText>
        <label>Area Country EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area containing this country.</description>
        <inlineHelpText>The area containing this country.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Countries</relationshipLabel>
        <relationshipName>AreaCountries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>A country in this area, if it is defined by country.</description>
        <inlineHelpText>A country in this area, if it is defined by country.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Area Countries</relationshipLabel>
        <relationshipName>AreaCountries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Area Country</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>